--- a/src/app/components/list-view/list-view.component.html
+++ b/src/app/components/list-view/list-view.component.html
@@ -4,7 +4,8 @@
       <div class="list-item-value id font-bold" innerHTML="{{ item.id | highlighter : searchString}}"></div>
       <div class="list-item-value name font-regular-italic" innerHTML="{{ item.name | highlighter : searchString}}"></div>
       <div class="list-item-value address" innerHTML="{{ item.address | highlighter : searchString}}"></div>
-      <div class="list-item-value items" *ngIf="isItemFound(item)"><span class="highlight">"{{searchString}}"</span> found in items </div>
+      <div class="list-item-value items" *ngIf="isItemFound(item)"><span class="highlight">"{{searchString}}"</span> found in Items </div>
+      <div class="list-item-value items font-regular-italic text-mute" *ngIf="!isItemFound(item)">No match in Items</div>
     </li>
   </ul>
 </div>
