Add Clear option
- Fix body overflow to hidden
- Add variables for height and indentation

--- a/src/app/components/auto-complete/auto-complete.component.html
+++ b/src/app/components/auto-complete/auto-complete.component.html
@@ -17,6 +17,7 @@
       (focus)="onFocus($event)"
       #search
     />
+    <span class="clear font-regular-italic" (click)="resetData()">Clear</span>
   </div>
   <span *ngIf="showDropdown">
     <div
