--- a/src/app/components/auto-complete/auto-complete.component.scss
+++ b/src/app/components/auto-complete/auto-complete.component.scss
@@ -1,3 +1,5 @@
+$height: 40px;
+$indent: 15px;
 .auto-complete {
   width: 100%;
   -webkit-box-shadow: 0 1px 8px -3px rgba(0, 0, 0, 0.21);
@@ -7,23 +9,34 @@
     flex-direction: row;
     .meta {
       overflow: hidden;
-      text-indent: 10px;
-      height: 40px;
-      line-height: 40px;
+      text-indent: $indent;
+      height: $height;
+      line-height: $height;
       padding-top: 2px;
     }
     .search-input {
       width: 100%;
-      height: 40px;
+      height: $height;
       background: white;
       border: none;
       border-radius: 3px;
-      text-indent: 10px;
+      text-indent: $indent;
       outline: none;
       font-size: 1em;
       &:focus {
         background-color: white;
         border-bottom: 1px solid #eaeaea;
+      }
+    }
+    .clear {
+      height: $height;
+      line-height: $height;
+      font-size: 0.8em;
+      color: blue;
+      padding: 2px 8px 0 8px;
+      cursor: pointer;
+      &:hover {
+        font-weight: 800 !important;
       }
     }
   }
